<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".MainActivityFragment">

    <EditText
        android:id="@+id/input_searchByTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/search_bar"
        android:hint="@string/search_by_title"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:autofillHints="@string/addNote_hintURL" />

    <EditText
        android:id="@+id/input_searchByNote"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:background="@drawable/search_bar"
        android:hint="@string/search_by_note"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:autofillHints="@string/addNote_hintURL"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/swipe_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swipe_to_delete"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9193191601772541/2178737949"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="bottom"/>

    <include
        layout="@layout/fragment_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/note_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

</LinearLayout>