<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutApp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/tube_notes"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/tube_note_logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="openLink"
                    android:tag="https://www.instagram.com/odukle.jpg"
                    android:text="@string/follow" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="openEmail"
                    android:tag="sodukle@gmail.com"
                    android:text="@string/feedback" />

            </LinearLayout>

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/privacy_policy" />

            <Button
                android:id="@+id/test_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_aa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        ads:adSize="LARGE_BANNER"
        android:layout_alignParentBottom="true"
        ads:adUnitId="ca-app-pub-9193191601772541/2178737949" />
</RelativeLayout>